--- a/src/components/EventsApp/EventsApp.css
+++ b/src/components/EventsApp/EventsApp.css
@@ -6,7 +6,7 @@
 }
 
 #events {
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   font-style: normal;
   font-weight: 500;
